| Summary: | ASTERISK-27418: app_confbridge: "core show profile bridge" does not output "sfu" when video_mode is sfu | ||
| Reporter: | Carlos Chavez (cchavezp) | Labels: | |
| Date Opened: | 2017-11-14 16:17:28.000-0600 | Date Closed: | 2018-04-19 16:11:41 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 15.1.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS 7.4 | Attachments: | |
| Description: | When I set "video_mode=sfu" in confbridge.conf (default_bridge section) we get no video. A "confbridge show profile bridge default_bridge" command shows:
Video Mode: no video If I change the option to follow_talker, last_marked or first_marked video Mode it changes accordingly, only sfu fails. I also tried to set it via Dialplan using the CONFBRIDGE function with the same result. http://lists.digium.com/pipermail/asterisk-users/2017-November/292121.html | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-11-14 16:17:28.790-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2017-11-14 16:24:39.941-0600 According to the linked users list, this is just a problem with the configuration display output from CLI "confbridge show profile bridge default_bridge". By: Friendly Automation (friendly-automation) 2018-04-19 16:11:41.842-0500 Change 8813 merged by Jenkins2: "confbridge show profile bridge" does not output "sfu" when video_mode is sfu [https://gerrit.asterisk.org/8813|https://gerrit.asterisk.org/8813] By: Friendly Automation (friendly-automation) 2018-04-19 16:16:24.249-0500 Change 8814 merged by Jenkins2: "confbridge show profile bridge" does not output "sfu" when video_mode is sfu [https://gerrit.asterisk.org/8814|https://gerrit.asterisk.org/8814] | ||